Add react query for campaigns (#3316)
