# src/models/convert/campaign/types.ts
@@ -1,0 +1,18 @@
+import {Components, Paths} from 'rest_api/revenue_addon_api/client.generated'
+
+export type CampaignParams =
+    | Paths.GetCampaign.PathParameters
+    | Paths.PatchCampaign.PathParameters
+    | Paths.DeleteCampaign.PathParameters
+
+export type Campaign = Components.Schemas.CampaignResponseSchema
+
+export type CampaignCreatePayload =
+    Components.Schemas.CampaignCreateRequestSchema
+
+export type CampaignUpdatePayload =
+    Components.Schemas.CampaignPatchRequestSchema
+
+export type CampaignListOptions = {
+    channelConnectionId: string
+}
